Header z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ header {
     font-weight: 300;
     padding: 10px 0;
     height: 80px;
+    z-index: 10;
 }
 
 body {
